2008-05-23 Jim Garlick <garlick@llnl.gov>

	* autoconf.ac, src/powerman.c : Use HAVE_GENDERS_H for <genders.h>.

	* autoconf.ac, src/wrappers.c : Use HAVE_PTY_H for <pty.h>.

2008-05-22 Jim Garlick <garlick@llnl.gov>

	* parse_tab.y, parse_lex.l, Makefile.am : Use default automake
	rules for lex/yacc and rename files so they fit.

	* parse_tab.y, parse_lex.l : Removed deprecated config file syntax,
	which emitted warnings since 1.0.16 (Jan 2002).  Reformatted some
	lex code for readability.

	* autoconf.ac : Require flex as scaner is (currently) flex specific.

	* autoconf.ac, config/ac_genders.m4, src/Makefile.am, powerman.c : 
	Add --genders option.

	* src/powerman.c, src/powermand.c : Handle missing getopt_long().

2008-05-21 Jim Garlick <garlick@llnl.gov>

	* ChangeLog-1.0 : Updated to reflect trunk (1.0.32+)

	* htdocs, scripts/stonith-powerman, man/powerman-devices.7, 
	etc/*.dev, NEWS : Updated [copy from trunk].

	* config/ac_curl.m4, config/ac_readline.m4, config/ac_httppower.m4,
	src/Makefile.am, src/httppower.c : Support httppower [port from trunk].

	* src/parse.lex : Update white space rule [port from trunk].

	* src/parse.y, src/wrappers.c, src/client.c, src/powerman.c,
	src/powermand.c : Include limits.h. [port from trunk].

	* config/ac_forkpty.m4, src/device_pipe.c, src/wrappers.[ch] :
	Provide substitute forkpty() if missing (via Forkpty() wrapper).

	* src/client.c, src/powerman.c, src/powermand.c, Makefile.am :
	Stop defining POWERMAN_VERSION in CFLAGS and use VERSION from config.h.

	* config/ac_wrap.m4, src/parse_util.c, src/client.c : 
	Make tcp_wrappers optional.

	* man/powerman.1.in, config/ac_debug.m4, config/ac_genders.m4,
	config/ac_static_modules.m4, config/ac_powerman_module_dir.m4, 
	configure.ac, src/Makefile.am, src/powerman.c, src/ltdl.[ch], 
	src/powerman_options.h, src/powerman_options_genders.c :
	Drop modules, genders support (temporarily?) to focus on portability.
